--- a/index.html
+++ b/index.html
@@ -8,29 +8,88 @@
 
 <body>
   <header>
-    <div class="logo">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
-      </img>
-    </div>
-    <div>
-      <nav>
-        <ul>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#featured">Feature Tea</a></li>
-          <li><a href="#locations">Locations</a></li>
-        </ul>
-      </nav>
-    </div>
-
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"></img>
+    <nav>
+      <ul>
+        <li>
+          <a href="#mission">Mission</a>
+        </li>
+        <li>
+          <a href="#featured">Feature Tea</a>
+        </li>
+        <li>
+          <a href="#locations">Locations</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
-   <div class="background">
-     <div class="statement">
-       <h2>Our Mission</h2>
-       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea.</h4>
-     </div>
-   </div>
+  <div class="content">
+    <div class="intro">
+      <div class="banner">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea.</h4>
+      </div>
+    </div>
+    <div class="products">
+      <div>
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+      </div>
+      <div class="top-row">
+        <p>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg"></img><span>Fall Berry Blitz Tea</span>
+        </p>
+        <p>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg"></img><span>Spiced Rum Tea</span>
+        </p>
+        <p>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg"></img><span>Seasonal Doughnuts</span>
+        </p>
+      </div>
+      <div class="bottom-row">
+        <p>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg"></img><span>Myrtle Ave. Tea</span>
+        </p>
+        <p>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg"></img><span>Bedford Bizarre Tea</span>
+        </p>
+      </div>
+    </div>
+    <div class="locations">
+      <h2>Locations</h2>
+      <div class="boxes">
+        <div class="address">
+          <h3>Downtown</h3>
+          <p>384 West 4th St.</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="address">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Nortwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="address">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+      </div>
+    </div>
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+  </div>
 
-
+  <footer>
+    <h5>copyright The Tea Cozy 2017</h5>
+  </footer>
 
 </body>
+
+</html>
